--- a/app/views/templates/layout.html
+++ b/app/views/templates/layout.html
@@ -8,7 +8,8 @@
     <title>Document</title>
   </head>
   <body>
-    {{template "content" . }}
+    {{template "navbar"}}
+    <div class="container text-center">{{template "content" .}}</div>
   </body>
 </html>
 {{end}}
